# mortar

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  build.gradle.kts  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  publish.yml
docs/: api-reference.md  cli.md  comparison.md  ddd-clean-architecture-example.md  diagnostics.md  editor-smoke-tests.md  getting-started.md  intellij.md  lsp.md  metadata.md  migration-from-spring-data-query.md  neovim.md  performance-report-template.md  performance.md  plan.md  query-recipes.md  r17-query-corpus.md  refactor-safety.md  release.md  roadmap.md  spring-boot-compatibility.md  spring-boot-postgres-example.md  sql-snapshots.md  testkit.md  troubleshooting.md  usage-guide.md  vscode.md
docs/adr/: 0001-java-first-sql-transparent-architecture.md  0002-apache-2-license.md  0003-intellij-plugin-adapter-boundary.md  0004-generated-jdbc-executor.md  0005-r16-bound-read-query-contract.md  0006-r17-query-family-decisions.md  0007-r18-source-map-and-incremental-contract.md  0008-r19-java-call-resolution-boundary.md  0009-r22-scalar-and-mutation-contracts.md  0010-r23-retained-tooling-and-editor-evidence-boundaries.md  index.md
docs/benchmarks/: README.md  baseline-2026-06-01.md  performance-report-2026-06-01.md  postgres-execution-2026-06-01.md  r20-benchmark-readiness.md  r20-performance-gate.md  r20-postgres-baseline-manifest-template.json  r23-benchmark-readiness.md  r23-performance-gate.md  r23-retained-performance-evidence.md  thresholds.json
docs/examples/: spring-clean-architecture-repository.md
docs/research/: market-notes.md  postgres-performance-strategy.md
docs/spec/: architecture.md
editors/intellij/: build.gradle.kts
editors/intellij/marketplace/: change-notes.html  description.html
editors/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json  tsconfig.json
editors/vscode/scripts/: verify-vsix-package.mjs
examples/clean-architecture-postgres/: build.gradle.kts
examples/query-corpus-application/: build.gradle.kts
examples/query-corpus-domain/: build.gradle.kts
examples/query-corpus-infrastructure-postgres/: build.gradle.kts
examples/spring-boot-postgres/: build.gradle.kts
java/benchmarks/: build.gradle.kts
java/core/: build.gradle.kts
java/dialect-postgres/: build.gradle.kts
java/processor/: build.gradle.kts
java/runtime-jdbc/: build.gradle.kts
java/spring-boot-starter/: build.gradle.kts
java/testkit/: build.gradle.kts
rust/: Cargo.toml
rust/crates/mortar-cli/: Cargo.toml
rust/crates/mortar-cli/src/: lib.rs  main.rs
rust/crates/mortar-compiler/: Cargo.toml
rust/crates/mortar-compiler/src/: lib.rs
rust/crates/mortar-compiler/test-fixtures/source-map-contract/r18/: entities.json  source-map.json
rust/crates/mortar-compiler/tests/: source_map_contract.rs
rust/crates/mortar-lsp/: Cargo.toml
rust/crates/mortar-lsp/benches/: r20_lsp_resolver.rs  r23_rust_tooling_lsp.rs
rust/crates/mortar-lsp/benches/support/: lsp_benchmark_suite.rs
rust/crates/mortar-lsp/src/: lib.rs  main.rs
rust/crates/mortar-lsp/tests/: r20_lsp_benchmark_harness.rs
rust/crates/mortar-lsp/tests/support/: mod.rs  r20_lsp_benchmark.rs
(+190 files in other folders)
