[workspace]
members = [
    "crates/mortar-cli",
    "crates/mortar-compiler",
    "crates/mortar-lsp",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/sequelcore/mortar"
homepage = "https://github.com/sequelcore/mortar"
readme = "../README.md"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
postgres = "0.19.13"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
