[package]
name = "sequel-mortar-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Command-line tooling for Mortar query diagnostics and snapshots."

[lib]
name = "mortar_cli"

[[bin]]
name = "mortar"
path = "src/main.rs"

[dependencies]
clap.workspace = true
mortar-compiler = { package = "sequel-mortar-compiler", version = "0.1.0", path = "../mortar-compiler" }
postgres.workspace = true
serde_json.workspace = true

[dev-dependencies]
testcontainers-modules = { version = "0.13.0", features = ["blocking", "postgres"] }
