[package]
name = "sequel-mortar-compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Compiler and inspection foundation for Mortar query tooling."

[lib]
name = "mortar_compiler"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
